<?xml version="1.0" encoding="UTF-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".Cat"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenue"
        android:fontFamily="@font/archivo_black"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix"
        android:fontFamily="@font/archivo_black"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <RadioButton
            android:id="@+id/radioButton1"
            android:fontFamily="@font/archivo_black"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/catégorie1"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="241dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:text="@string/catégorie2"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="307dp" />

        <RadioButton
            android:id="@+id/radioButton3"  android:fontFamily="@font/archivo_black"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catégorie3"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="355dp" />

        <RadioButton
            android:id="@+id/radioButton4"  android:fontFamily="@font/archivo_black"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catégorie4"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="406dp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"  android:fontFamily="@font/archivo_black"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/catégorie5"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="453dp" />

    </RadioGroup>


    <Button
        android:id="@+id/précédent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/précédent"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:fontFamily="@font/archivo_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/suivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:fontFamily="@font/archivo_black"
        android:text="@string/Suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />


</androidx.constraintlayout.widget.ConstraintLayout>